Bug 505568 - When screen reader is on, "Toggle Screen Reader On and Off" shortcut turns it off, but then right back on again
Summary: When screen reader is on, "Toggle Screen Reader On and Off" shortcut turns it...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_access (other bugs)
Version First Reported In: 6.4.80
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: accessibility
Depends on:
Blocks:
 
Reported: 2025-06-13 14:29 UTC by Nate Graham
Modified: 2025-09-25 16:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-06-13 14:29:41 UTC
STEPS TO REPRODUCE
1. Press Meta+Alt+S to turn the screen reader on
2. Let it read some things
3. Press Meta+Alt+S again to turn the screen reader off


OBSERVED RESULT
Screen reader says "Screen reader off", then says "Screen reader on" immediately after that, and then continues to read things.


EXPECTED RESULT
Screen reader says "Screen reader off" and stays off.


SOFTWARE/OS VERSIONS
Git master everything on top of Fedora 42 KDE with Qt 6.9.0


ADDITIONAL INFORMATION
The checkbox in the KCM changes state appropriately when I use this keyboard shortcut, but it's Orca itself that doesn't match it, as it seems to turn itself back on immediately.

I can *actually* turn it off by making the checkbox in the KCM get into a checked state, and then uncheck it and press Apply.
Comment 1 cwo 2025-06-13 14:36:45 UTC
I can confirm this, it happens to me regularly - but apparently not always. I do suspect that the kcm may be involved somehow; if I haven't touched that it seems to happen less often.
Comment 2 Bug Janitor Service 2025-09-21 22:06:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3194
Comment 3 Bug Janitor Service 2025-09-25 07:15:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3208
Comment 4 Nate Graham 2025-09-25 14:32:08 UTC
Git commit eccd6115726ce8dc478c694c8cfb1542eaae828c by Nate Graham, on behalf of Sebastian Sauer.
Committed on 25/09/2025 at 14:32.
Pushed by ngraham into branch 'master'.

kaccess: Fix screen reader sometimes not being able to be toggled off anymore

KAccessApp::readSettings() is called everytime a setting in the kcms/access
was changed and ok/apply of the kcms/access pressed.

Since we did re-setup the GlobalShortcut and connect the QAction::triggered
signal of the "Toggle Screen Reader On and Off" toggleScreenReaderAction
QAction in KAccessApp::readSettings() we then ended to receive >=2 times a
toggleScreenReaderAction's QAction::triggered signal when pressing 1 time the
META+ALT+S global shortcut after using kcms/access.

Result of that was that after using the kcms/access, it was not possible to
turn of the Orca Screen Reader anymore using the META+ALT+S global shortcut.
FIXED-IN: 6.5.0

M  +6    -6    kaccess/kaccess.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/eccd6115726ce8dc478c694c8cfb1542eaae828c
Comment 5 Nate Graham 2025-09-25 16:39:28 UTC
Git commit 147269344de3c41b6647b06d8b6d885021c030f9 by Nate Graham.
Committed on 25/09/2025 at 15:37.
Pushed by ngraham into branch 'Plasma/6.5'.

kaccess: Fix screen reader sometimes not being able to be toggled off anymore

KAccessApp::readSettings() is called everytime a setting in the kcms/access
was changed and ok/apply of the kcms/access pressed.

Since we did re-setup the GlobalShortcut and connect the QAction::triggered
signal of the "Toggle Screen Reader On and Off" toggleScreenReaderAction
QAction in KAccessApp::readSettings() we then ended to receive >=2 times a
toggleScreenReaderAction's QAction::triggered signal when pressing 1 time the
META+ALT+S global shortcut after using kcms/access.

Result of that was that after using the kcms/access, it was not possible to
turn of the Orca Screen Reader anymore using the META+ALT+S global shortcut.
FIXED-IN: 6.5.0


(cherry picked from commit eccd6115726ce8dc478c694c8cfb1542eaae828c)

58b84261 kaccess: Fix sometimes screen reader cannot be toggled off anymore

Co-authored-by: Sebastian Sauer <dipesh@gmx.de>

M  +6    -6    kaccess/kaccess.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/147269344de3c41b6647b06d8b6d885021c030f9